--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fancy letterheaded paper</title>
-    <link rel="stylesheet" type="text/css" href="letterhead-paper-mdn-exercise.css">
+    <link rel="stylesheet" type="text/css" href="letterhead-paper.css">
     
   </head>
   <body>
